# http-server-benchmarks

./: .gitignore  Makefile  RESULTS.md  RESULTS_GO_FIBER.md  RESULTS_GO_NET_HTTP.md  RESULTS_NODE.md  RESULTS_PYPY_FASTAPI.md  RESULTS_PYTHON_FASTAPI.md  RESULTS_PYTHON_FLASK.md  RESULTS_RUST_ACTIX_WEB.md  RESULTS_RUST_AXUM.md
go_fiber/: go.mod  main.go
go_net_http/: go.mod  main.go
node/: app.js  package-lock.json  package.json  server.js
python_fastapi/: main.py  requirements.txt
python_flask/: main.py
rust_actix_web/: Cargo.toml
rust_actix_web/src/: main.rs
rust_axum/: Cargo.toml
rust_axum/src/: main.rs
