[package]
name = "rust_actix_web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
chrono = { version = "0.4.43", features = ["serde"] }
rusqlite = { version = "0.38.0", features = ["chrono"] }
serde = "1.0.228"
serde_json = "1.0.145"
uuid = {version = "1.19.0", features = ["v4"]}
validator = { version = "0.20.0", features = ["derive"] }
