[package]
name = "rust_axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
hyper = "1.8.1"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = {version = "1.19.0", features = ["v4"]}
validator = { version = "0.20.0", features = ["derive"] }
